@@ -1,11 +1,39 @@
 ========================
    Test of Transforms   
 ========================
-Real vector: fft_real(x,y), ifft_real(y,z)
+
+Test 1: FFT/IFFT; Real input vector; N = 16;  fft_real(x, y), ifft_real(y, z):
+
 x = [1.45728 -1.13848 1.12252 0.937431 0.308753 1.30289 -0.505866 0.746416 -0.697447 1.02252 0.432204 0.563233 0.917611 -0.403519 0.457302 1.28131]
-y = [7.80417+0i 1.31178-0.0887597i -0.811778-0.512662i 1.59405+2.87097i 0.480037+2.74498i 0.377024+3.70282i -0.121277+2.69392i 5.33606-1.69234i -0.819442-0i 5.33606+1.69234i -0.121277-2.69392i 0.377024-3.70282i 0.480037-2.74498i 1.59405-2.87097i -0.811778+0.512662i 1.31178+0.0887597i]
+y = [7.80417+0i 1.31178-0.0887597i -0.811778-0.512662i 1.59405+2.87097i 0.480037+2.74498i 0.377024+3.70282i -0.121277+2.69392i 5.33606-1.69234i -0.819442+0i 5.33606+1.69234i -0.121277-2.69392i 0.377024-3.70282i 0.480037-2.74498i 1.59405-2.87097i -0.811778+0.512662i 1.31178+0.0887597i]
 z = [1.45728 -1.13848 1.12252 0.937431 0.308753 1.30289 -0.505866 0.746416 -0.697447 1.02252 0.432204 0.563233 0.917611 -0.403519 0.457302 1.28131]
-Complex vector: fft(x,y), ifft(y,z)
-x = [-1.95974-1.08227i -1.05337+0.397129i 0.370509-0.639193i 0.507353+0.0595547i -0.0758261-0.157134i -0.483975+0.158727i -0.507805-0.400208i -1.01415+0.298065i -0.781279+0.220548i 1.15323-0.319662i 0.181756-0.235722i -0.866433-0.637334i 0.219153-0.139473i 0.191044+0.93052i -0.0200631-0.358544i -0.998818-0.958855i]
-y = [-5.1384-2.86385i -1.58685-0.784517i -4.54897-3.86661i -2.83319-0.373931i -0.216805-1.70364i 3.22383+2.92036i -2.5332-0.158073i 1.55884-1.92336i -0.00818703-2.72014i -0.478203-1.32i -1.45205+0.576104i -1.07464-1.88716i -5.02737+2.65431i -5.94326-4.84721i -3.00317+1.1881i -2.29422-2.20675i]
-z = [-1.95974-1.08227i -1.05337+0.397129i 0.370509-0.639193i 0.507353+0.0595547i -0.0758261-0.157134i -0.483975+0.158727i -0.507805-0.400208i -1.01415+0.298065i -0.781279+0.220548i 1.15323-0.319662i 0.181756-0.235722i -0.866433-0.637334i 0.219153-0.139473i 0.191044+0.93052i -0.0200631-0.358544i -0.998818-0.958855i]
+
+Test 2: FFT/IFFT; Real input vector; N = 11;  fft_real(x, y), ifft_real(y, z):
+
+x = [0.00583875 -0.0358695 -0.453088 -1.72459 1.19487 0.284213 -0.281477 1.51511 1.09403 1.63073 -0.516334]
+y = [2.71344+0i -1.65704+4.50833i -0.773098+0.332558i 0.970535-3.88095i -2.92968-0.297068i 3.06468+0.0169775i 3.06468-0.0169775i -2.92968+0.297068i 0.970535+3.88095i -0.773098-0.332558i -1.65704-4.50833i]
+z = [0.00583875 -0.0358695 -0.453088 -1.72459 1.19487 0.284213 -0.281477 1.51511 1.09403 1.63073 -0.516334]
+
+Test 3: FFT/IFFT; Complex input vector; N = 32;  fft(x, y), ifft(y, z):
+
+x = [-0.781279+0.220548i 1.15323-0.319662i 0.181756-0.235722i -0.866433-0.637334i 0.219153-0.139473i 0.191044+0.93052i -0.0200631-0.358544i -0.998818-0.958855i 0.11692-0.622633i -0.138344+1.18493i 0.4894-0.0572022i -1.33716-0.619299i -0.214406+0.297753i 0.555327+0.957725i -0.192308-0.464038i 1.38394+1.46117i -0.120173+1.04821i -0.0550264+0.808222i 0.532925-0.19296i -0.369841-0.242392i -0.846777-0.175999i -0.292145+0.410116i -1.49255+0.7828i -0.170349+1.34399i 0.674818-1.33202i -0.0533253-0.48926i 0.459658+0.866951i 0.245256+0.894607i 0.830137+1.56555i 0.285348-0.0146625i 1.23943-0.0535705i 1.26667-0.263864i]
+y = [1.87601+5.5956i 0.568547-1.71506i 1.4986+6.83728i -3.61038-2.70986i 0.864677-1.01831i 3.09481-4.07863i -0.801548+9.08514i 0.121942+3.32881i 1.17006-1.91863i -2.20788-5.76476i -7.17703+4.28844i -3.09422-3.3611i -5.7079+1.70236i -0.0813181-2.22583i -3.77616+0.469397i 2.18409+5.77193i 0.277258-3.2963i -0.291167+2.09187i -6.37338+2.96434i -4.95197+3.19077i -0.11148-7.70761i -1.65939+5.48613i -1.93524+1.90986i -5.40128-6.1495i -3.80975+3.06707i 4.6104+7.93755i -3.43604+3.77704i -3.27729-6.41174i 4.56341-1.91133i -3.64772-3.88944i 8.45528-3.54415i 7.06514-4.74384i]
+z = [-0.781279+0.220548i 1.15323-0.319662i 0.181756-0.235722i -0.866433-0.637334i 0.219153-0.139473i 0.191044+0.93052i -0.0200631-0.358544i -0.998818-0.958855i 0.11692-0.622633i -0.138344+1.18493i 0.4894-0.0572022i -1.33716-0.619299i -0.214406+0.297753i 0.555327+0.957725i -0.192308-0.464038i 1.38394+1.46117i -0.120173+1.04821i -0.0550264+0.808222i 0.532925-0.19296i -0.369841-0.242392i -0.846777-0.175999i -0.292145+0.410116i -1.49255+0.7828i -0.170349+1.34399i 0.674818-1.33202i -0.0533253-0.48926i 0.459658+0.866951i 0.245256+0.894607i 0.830137+1.56555i 0.285348-0.0146625i 1.23943-0.0535705i 1.26667-0.263864i]
+
+Test 4: FFT/IFFT; Complex input vector; N = 7;  fft(x, y), ifft(y, z):
+
+x = [-0.277403-0.888712i 0.463119+0.497562i -0.4686+0.563075i 0.0245883+0.461683i -1.90972-0.32733i -0.167519+0.380106i 0.770337+0.197172i]
+y = [-1.5652+0.883556i 3.08722-1.09202i -1.55751-0.128128i -0.609326-2.94439i -2.12235+1.03144i -0.750708-3.4905i 1.57607-0.480936i]
+z = [-0.277403-0.888712i 0.463119+0.497562i -0.4686+0.563075i 0.0245883+0.461683i -1.90972-0.32733i -0.167519+0.380106i 0.770337+0.197172i]
+
+Test 5: DCT/IDCT; Real input vector; N = 8;  dct(x, y), idct(y, z):
+
+x = [1.30494 0.191007 -0.938314 -0.903932 -2.06594 0.927729 0.869728 -0.904115]
+y = [-0.537012 0.396125 1.76205 1.57689 -1.27958 1.24755 0.15007 -0.941598]
+z = [1.30494 0.191007 -0.938314 -0.903932 -2.06594 0.927729 0.869728 -0.904115]
+
+Test 6: DCT/IDCT; Real input vector; N = 11;  dct(x, y), idct(y, z):
+
+x = [0.879152 -0.902786 0.93327 0.540783 -1.58497 0.734985 0.709581 1.16642 1.00454 -0.204033 -0.691208]
+y = [0.779629 -0.051077 -0.416365 1.54506 -0.976601 -0.348817 0.438203 1.33674 1.63548 0.0974446 -0.535374]
+z = [0.879152 -0.902786 0.93327 0.540783 -1.58497 0.734985 0.709581 1.16642 1.00454 -0.204033 -0.691208]
